--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "element-ui": "^2.4.5",
+    "gsap": "^2.1.2",
+    "jStat": "^1.7.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.6.0",
+    "node-sass": "^4.9.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
