--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build:gh": "cross-env NODE_ENV=ghpages vue-cli-service build"
   },
   "dependencies": {
     "element-ui": "^2.4.5",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@vue/cli-service": "^3.7.0",
+    "cross-env": "^5.2.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.5.21"
   }
